// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should default to hidden 1`] = `
<div class="syn-toast">
  <div class="syn-flex justify-space-between align-stretch">
    <div class="syn-flex align-center"><i class="material-icons">check_circle</i> <span class="syn-body-1 syn-text-light-primary syn-mb-0 syn-ml-8"></span></div> <button data-e2e="toast-close-button" class="syn-btn icon text medium theme-light"><i class="material-icons icon-size-20">close</i></button>
  </div>
</div>
`;

exports[`Toast should hide toast if close button is clicked 1`] = `
<div class="syn-toast">
  <div class="syn-flex justify-space-between align-stretch">
    <div class="syn-flex align-center"><i class="material-icons">check_circle</i> <span class="syn-body-1 syn-text-light-primary syn-mb-0 syn-ml-8"></span></div> <button data-e2e="toast-close-button" class="syn-btn icon text medium theme-light"><i class="material-icons icon-size-20">close</i></button>
  </div>
</div>
`;

exports[`Toast should hide toast if hide event is emitted from root 1`] = `
<div class="syn-toast">
  <div class="syn-flex justify-space-between align-stretch">
    <div class="syn-flex align-center"><i class="material-icons">check_circle</i> <span class="syn-body-1 syn-text-light-primary syn-mb-0 syn-ml-8"></span></div> <button data-e2e="toast-close-button" class="syn-btn icon text medium theme-light"><i class="material-icons icon-size-20">close</i></button>
  </div>
</div>
`;

exports[`Toast should show message provided in show-toast event 1`] = `
<div class="syn-toast shown">
  <div class="syn-flex justify-space-between align-stretch">
    <div class="syn-flex align-center"><i class="material-icons">check_circle</i> <span class="syn-body-1 syn-text-light-primary syn-mb-0 syn-ml-8">Hello, world!</span></div> <button data-e2e="toast-close-button" class="syn-btn icon text medium theme-light"><i class="material-icons icon-size-20">close</i></button>
  </div>
</div>
`;

exports[`Toast should show toast if show event is emitted from root 1`] = `
<div class="syn-toast shown">
  <div class="syn-flex justify-space-between align-stretch">
    <div class="syn-flex align-center"><i class="material-icons">check_circle</i> <span class="syn-body-1 syn-text-light-primary syn-mb-0 syn-ml-8"></span></div> <button data-e2e="toast-close-button" class="syn-btn icon text medium theme-light"><i class="material-icons icon-size-20">close</i></button>
  </div>
</div>
`;
